Archive2/9d/c0c0dcb9fac11a/output
+ clang++ -std=c++11 -O3 -Wall -pedantic -pthread main.cpp
main.cpp:2:14: error: cannot deduce type of initializer list because std::initializer_list was not found; include <initializer_list>
    auto x = { 1, 2, 3 };
             ^
1 error generated.
